# hvadvilduhelst

./: NOTES.md  README.md  notebook.ipynb  pyproject.toml
.cursor/rules/: guidelines.mdc
data/: o3_scraped.jsonl
data/hygdk/: arbejde.jsonl  børn.jsonl  dating.jsonl  druk.jsonl  dumt.jsonl  dyr.jsonl  familie.jsonl  ferie.jsonl  fest.jsonl  film_spil_tv.jsonl  forhold.jsonl  geografi.jsonl  hobbies.jsonl  i_lokalet.jsonl  internet.jsonl  kriminalitet.jsonl  køretøjer.jsonl  mad.jsonl  musik.jsonl  personlige.jsonl  sex.jsonl  skole.jsonl  sociale_medier.jsonl  sport.jsonl  sygdom.jsonl  tøj.jsonl  ulækkert.jsonl
docs/: dataset_description.md  experiments.md  plan.md  structured_output_openai.md
scripts/: probe_dataset.py
src/hvadvilduhelst/: __init__.py  load_hygdk.py  upload_to_huggingface.py
